--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@ layout: default
                     </ul>
                 </section>
                 <p class="copyright">
-                    &copy; {{ site.author }}. Design: {{ site.web_design }}
+                    &copy; {{ site.author }}.
                 </p>
             </div>
+            <!--
             <div>
                 <section>
                     <h2>Get in touch</h2>
@@ -112,6 +113,7 @@ layout: default
                     </form>
                 </section>
             </div>
+            -->
         </div>
     </footer>
 </div>
